db/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: db
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
